<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Slogan"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:textSize="25sp"
                android:textStyle="italic"
                android:textAlignment="center"
                >

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Entry"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:textSize="15sp"
                android:textStyle="italic"
                android:textAlignment="center">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:weightSum="2"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/dailySoupContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                        <LinearLayout
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center">
                            <ImageView

                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/soup">

                            </ImageView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/DailySoup"
                                android:gravity="center">

                            </TextView>

                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/dailyMaincourseContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center">
                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/maincourse">

                        </ImageView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/DailyMaincourse"
                            android:gravity="center">

                        </TextView>

                    </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:weightSum="2"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/dailyBreakfastContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center">
                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/breakfast">

                        </ImageView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/DailyBreakfast"
                            android:gravity="center">

                        </TextView>

                    </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/dailySaladContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center">
                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/salad">

                        </ImageView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/DailySalad"
                            android:gravity="center">

                        </TextView>

                    </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:weightSum="2"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/dailyDessertContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center">
                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/dessert">

                        </ImageView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/DailyDessert"
                            android:gravity="center">

                        </TextView>

                    </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/dailyAppetizerContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center">
                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/appetizer">

                        </ImageView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/DailyAppetizer"
                            android:gravity="center">

                        </TextView>

                    </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:weightSum="2"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/dailyMezzeContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center">
                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/mezze">

                        </ImageView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/DailyMezze"
                            android:gravity="center">

                        </TextView>

                    </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center">


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center">


                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>


</LinearLayout>